--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     /* overflow-y: hidden; */
 }
 .sidebar{
-    background-color:black;
+    background-color:rgb(2, 45, 59);
    width: 434px;
    font-family: "Fira Sans", sans-serif;
    height: 100vh;
@@ -94,7 +94,7 @@ body{
     flex-wrap: wrap;
 }
 .devPic img{
-    border-radius: 50%;
+    
     height: 54vh;
 }
 .devinfo{
